Get maxmin data

--- a/Level 1 Notebook Benchmark new.ipynb
+++ b/Level 1 Notebook Benchmark new.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "3a03723e-78ae-4150-ba22-e2e485b95cdb",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0f1da678",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "4  (10.324635504740822, 105.27389181724476)          Rice"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "5e339a34-cfa7-4899-9165-63ca7c01bbb9",
    "metadata": {},
    "outputs": [],
@@ -311,9 +311,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "36b3fc73-94fa-4068-896b-1aaf70857c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.13755947351455688, 0.0653388574719429)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample = crop_presence_data[\"Latitude and Longitude\"].iloc[0]\n",
+    "latlong = sample.replace('(','').replace(')','').replace(' ','').split(',')\n",
+    "time_of_interest = \"2020-03-20/2020-03-21\"\n",
+    "bbox_of_interest = (float(latlong[1]) , float(latlong[0]), float(latlong[1]) , float(latlong[0]))\n",
+    "catalog = pystac_client.Client.open(\n",
+    "        \"https://planetarycomputer.microsoft.com/api/stac/v1\"\n",
+    "    )\n",
+    "search = catalog.search(collections=[\"sentinel-1-rtc\"], bbox=bbox_of_interest, datetime=time_of_interest)\n",
+    "items = list(search.get_all_items())\n",
+    "data = stac_load([items[0]], patch_url=pc.sign, bbox=bbox_of_interest).isel(time=0)\n",
+    "vh = data[\"vh\"].astype(\"float\").values.tolist()[0][0]\n",
+    "vv = data[\"vv\"].astype(\"float\").values.tolist()[0][0]\n",
+    "vv, vh"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "caab9734-6cdf-466f-87c3-8067b05b90ba",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<h4 style=\"color:rgb(195, 52, 235)\"><strong>Tip 3 </strong></h4>"
    ]
@@ -328,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "4c51cd6e-41e2-4df4-ae07-349be861f0f0",
    "metadata": {},
    "outputs": [
@@ -336,7 +371,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 600/600 [01:34<00:00,  6.33it/s]\n"
+      "100%|██████████| 600/600 [01:27<00:00,  6.85it/s]\n"
      ]
     }
    ],
